src/objects/Asset.object
<CustomObject><fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Cash_or_Market_Value__c</fullName>
        <description>Value must be greater than 0</description>
        <label>Cash or Market Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Cash_or_Market_Value_for_Stocks_or_Bonds__c</fullName>
        <label>Cash or Market Value for Stocks or Bonds</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank/Credit Union</fullName>
                </value>
                <value>
                    <fullName>Stock &amp; Bonds</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Retirement Fund</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Real Estate Owned(REO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Company_Name_for_Stocks_or_Bonds__c</fullName>
        <label>Company Name for Stocks or Bonds</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Financial_Institution_Address__c</fullName>
        <description>Field visible for Bank/Credit union, stock &amp; Bonds, Life Insurance, Retirement Fund and Business Categories</description>
        <label>Financial Institution Address</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Financial_Institution_Zip_Code__c</fullName>
        <label>Financial Institution Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Financial_institution_City__c</fullName>
        <label>Financial institution City</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Finanical_Institution_State__c</fullName>
        <label>Finanical Institution State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Is_Asset_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Asset Validated?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Life_Insurance_Policy_Face_Value__c</fullName>
        <description>Value must be greater than 0</description>
        <label>Life Insurance Policy - Face Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Name_of_Institution__c</fullName>
        <description>Field visible for Bank/Credit union, stock &amp; Bonds, Life Insurance, Retirement Fund and Business Categories</description>
        <label>Name of Institution</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Net_Worth_of_Business_es_Owned__c</fullName>
        <description>Value must be greater than 0</description>
        <label>Net Worth of Business(es) Owned</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Other_Asset_Amount__c</fullName>
        <description>Value must be greater that 0</description>
        <label>Other Asset Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Other_Assets_Type__c</fullName>
        <label>Other Assets Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Deposit on Sales Contract</fullName>
                </value>
                <value>
                    <fullName>Gifts Not Deposited</fullName>
                </value>
                <value>
                    <fullName>Secured Borrower Funds not Deposited</fullName>
                </value>
                <value>
                    <fullName>Bridge Loan Not Deposited</fullName>
                </value>
                <value>
                    <fullName>Other Non-Liquid Asset</fullName>
                </value>
                <value>
                    <fullName>Other Liquid Asset</fullName>
                </value>
                <value>
                    <fullName>Net Equity</fullName>
                </value>
                <value>
                    <fullName>Liquid Assets</fullName>
                    <isActive>false</isActive>
                    <label>Liquid Assets</label>
                </value>
                <value>
                    <fullName>Non-Liquid Assets</fullName>
                    <isActive>false</isActive>
                    <label>Non-Liquid Assets</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Present_Market_Value__c</fullName>
        <label>Present Market Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>RelatedClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedClient</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>RelatedLoan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLoan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Retirement_Funds__c</fullName>
        <label>Retirement Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Schedule_of_REO_Address_Line_2__c</fullName>
        <label>Schedule of REO Address Line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Schedule_of_REO_City__c</fullName>
        <label>Schedule of REO City</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Schedule_of_REO_Property_Address__c</fullName>
        <label>Schedule of REO Property Address</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Schedule_of_REO_State__c</fullName>
        <label>Schedule of REO State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Schedule_of_REO_Zip_Code__c</fullName>
        <description>can have numbers or one hyphen (-)</description>
        <label>Schedule of REO Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type of Stock Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Mutual fund</fullName>
                </value>
                <value>
                    <fullName>Gift of Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Type_of_Account__c</fullName>
        <description>Savings, Money Market, Checking Account</description>
        <label>Type of Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate of Deposit/Time Deposit</fullName>
                </value>
                <value>
                    <fullName>Checking Account</fullName>
                </value>
                <value>
                    <fullName>Trust Account</fullName>
                </value>
                <value>
                    <fullName>Cash on Hand</fullName>
                </value>
                <value>
                    <fullName>Money Market Fund</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Vested_Interest_in_Retirement_Fund__c</fullName>
        <description>Value must be greater than 0</description>
        <label>Vested Interest in Retirement Fund</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To know whether the record is active or not</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>isJoint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pointer to all the clients</description>
        <label>isJoint</label>
        <type>Checkbox</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews><validationRules>
        <fullName>Amount_above_0</fullName>
        <active>true</active>
        <errorConditionFormula>Other_Asset_Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Other_Asset_Amount__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>Amount_more_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>Net_Worth_of_Business_es_Owned__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Net_Worth_of_Business_es_Owned__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>Amount_not_0</fullName>
        <active>true</active>
        <errorConditionFormula>Present_Market_Value__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Present_Market_Value__c</errorDisplayField>
        <errorMessage>value must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>Financial_Institution_Zip_Code_Validati</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Financial_Institution_Zip_Code__c ='', 
OR( 
ISPICKVAL( Category__c, "Bank/Credit Union"), 
ISPICKVAL( Category__c, "Stock &amp; Bonds"), 
ISPICKVAL( Category__c, "Life Insurance"), 
ISPICKVAL( Category__c, "Retirement Fund"), 
ISPICKVAL( Category__c, "Business")))</errorConditionFormula>
        <errorDisplayField>Financial_Institution_Zip_Code__c</errorDisplayField>
        <errorMessage>Mandatory Zip for this Category</errorMessage>
    </validationRules><validationRules>
        <fullName>Financial_institution_City_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Financial_institution_City__c ='', 
OR( 
ISPICKVAL( Category__c, "Bank/Credit Union"), 
ISPICKVAL( Category__c, "Stock &amp; Bonds"), 
ISPICKVAL( Category__c, "Life Insurance"), 
ISPICKVAL( Category__c, "Retirement Fund"), 
ISPICKVAL( Category__c, "Business")))</errorConditionFormula>
        <errorDisplayField>Financial_institution_City__c</errorDisplayField>
        <errorMessage>Financial Institution City is mandatory for this category</errorMessage>
    </validationRules><validationRules>
        <fullName>Financial_institution_address_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISBLANK(Financial_Institution_Address__c), 
OR( 
ISPICKVAL( Category__c, "Bank/Credit Union"), 
ISPICKVAL( Category__c, "Stock &amp; Bonds"), 
ISPICKVAL( Category__c, "Life Insurance"),
ISPICKVAL( Category__c, "Retirement Fund"),
ISPICKVAL( Category__c, "Business")))</errorConditionFormula>
        <errorDisplayField>Financial_Institution_Address__c</errorDisplayField>
        <errorMessage>Financial Institution address is mandatory for this Category</errorMessage>
    </validationRules><validationRules>
        <fullName>Finanical_Institution_State_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Finanical_Institution_State__c, "*"), 
OR( 
ISPICKVAL( Category__c, "Bank/Credit Union"), 
ISPICKVAL( Category__c, "Stock &amp; Bonds"), 
ISPICKVAL( Category__c, "Life Insurance"), 
ISPICKVAL( Category__c, "Retirement Fund"), 
ISPICKVAL( Category__c, "Business")))</errorConditionFormula>
        <errorDisplayField>Finanical_Institution_State__c</errorDisplayField>
        <errorMessage>State is mandatory for this category</errorMessage>
    </validationRules><validationRules>
        <fullName>Name_of_Institution_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Name_of_Institution__c ='', 
OR( 
ISPICKVAL( Category__c, "Bank/Credit Union"), 
ISPICKVAL( Category__c, "Stock &amp; Bonds"), 
ISPICKVAL( Category__c, "Life Insurance"),
ISPICKVAL( Category__c, "Retirement Fund"),
ISPICKVAL( Category__c, "Business")))</errorConditionFormula>
        <errorDisplayField>Name_of_Institution__c</errorDisplayField>
        <errorMessage>Name of the Institution is mandatory for this category</errorMessage>
    </validationRules><validationRules>
        <fullName>Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Life_Insurance_Policy_Face_Value__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Life_Insurance_Policy_Face_Value__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>Value_must_be_greater_than_0</fullName>
        <active>true</active>
        <description>Value must be greater than 0</description>
        <errorConditionFormula>Cash_or_Market_Value__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Cash_or_Market_Value__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>Vested_Interest_in_Retirement_Fund_valid</fullName>
        <active>true</active>
        <errorConditionFormula>Vested_Interest_in_Retirement_Fund__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Vested_Interest_in_Retirement_Fund__c</errorDisplayField>
        <errorMessage>Value must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>ZipCode</fullName>
        <active>true</active>
        <description>can have numbers or one hyphen (-)</description>
        <errorConditionFormula>AND( OR(), NOT(REGEX(Schedule_of_REO_Zip_Code__c , "\\d{5}(-\\d{4})?")) )</errorConditionFormula>
        <errorDisplayField>Schedule_of_REO_Zip_Code__c</errorDisplayField>
        <errorMessage>can have numbers or one hyphen (-)</errorMessage>
    </validationRules><validationRules>
        <fullName>Zip_Validation</fullName>
        <active>false</active>
        <description>can have numbers and hypen</description>
        <errorConditionFormula>AND( OR(), NOT(REGEX(Financial_Institution_Zip_Code__c , "\\d{5}(-\\d{4})?")) )</errorConditionFormula>
        <errorDisplayField>Financial_Institution_Zip_Code__c</errorDisplayField>
        <errorMessage>can have only numbers and one hypen</errorMessage>
    </validationRules></CustomObject>